--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,17 +3,17 @@ version: 0.2
 phases:
     install:
         runtime-versions:
-            java: corretto11
+            golang: 1.13
     pre_build:
         commands:
             - echo Nothing to do in the pre_build phase...
     build:
         commands:
             - echo Build started on `date`
-            - mvn install
+            - go build server.go
     post_build:
         commands:
             - echo Build completed on `date`
 artifacts:
     files:
-        - target/messageUtil-1.0.jar
+        - server
